[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["multipart"] }
axum-macros = "0.3.7"
clap = { version = "4.3.4", features = ["derive"] }
multer = "2.1.0"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
